--- a/templates/pages/characters.html
+++ b/templates/pages/characters.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+<div id="loading"></div>
 
 {% if chars[0] %}
 <table class="table table-striped table-dark table-bordered table-hover">
@@ -46,11 +47,14 @@
 </table>
 {% endif %}
 
+
 {% if movies[0] %}
 {% if not chars[0] %}
-<a href="/get-characters-quotes">
-    <button type="button" class="btn btn-primary btn-lg" id="char-quote-btn">Get Other Stuff</button>
-</a>
+<div class="content">
+  <a href="/get-characters-quotes">
+      <button type="button" class="btn btn-primary btn-lg" id="char-quote-btn">Get Other Stuff</button>
+  </a>
+</div>
 {% endif %}
 {% endif %}
 
