--- a/templates/base.html
+++ b/templates/base.html
@@ -10,31 +10,36 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 justify-content-between">
         <a class="navbar-brand mx-3" href="/">Lord of the Rings</a>
         <div class="navbar-collapse collapse">
             <ul class="navbar-nav d-flex align-items-right">
                 <li class="nav-item" id="movies"><a class="nav-link" href="/movies">Movies</a></li>
-                <!-- could do a dropdown for movies -->
                 <li class="nav-item" id="characters"><a class="nav-link" href="/characters">Characters</a></li>
                 <li class="nav-item" id="quotes"><a class="nav-link" href="/quotes">Quotes</a></li>
             </ul>
 
-            <ul class="navbar-nav ms-auto mx-5">
-                {% if not g.user %}
-                <li class="nav-item"><a class="nav-link" href="/signup">Create User</a></li>
-                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                {% endif %}
+            <div class="ms-auto d-flex">
                 {% if g.user %}
-                <li class="nav-item"><a class="nav-link" href="/users/{{g.user.id}}">Profile</a></li>
-                <li class="nav-item"><a class="nav-link" href="/users/edit">Edit</a></li>
-                <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+                <form action="/results" class="d-flex" method="POST">
+                    <input class="form-control mr-sm-2" name="search" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-success my-2 my-sm-0 mx-2" type="submit">Search</button>
+                </form>
                 {% endif %}
-            </ul>
+                <ul class="navbar-nav mx-5">
+                    {% if not g.user %}
+                    <li class="nav-item"><a class="nav-link" href="/signup">Create User</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                    {% endif %}
+                    {% if g.user %}
+                    <li class="nav-item"><a class="nav-link" href="/users/{{g.user.id}}">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+
         </div>
     </nav>
-<!-- ms-auto is the new ml-auto i hate documentation -->
 
     <div class="container">
     {% for category, message in get_flashed_messages(with_categories=True) %}
