--- a/templates/movies/movies.html
+++ b/templates/movies/movies.html
@@ -3,32 +3,35 @@
 {% block title %}Movies{% endblock %}
 
 {% block content %}
+
+{% if movies[0] %}
 <div class="row">
   <div class="col-md-4">
-    <div class="card movie" id="{{fotr.id}}" style="width: 24rem; cursor: pointer;">
+    <div class="card h-100 movie" id="{{fotr.id}}" style="width: 27rem; cursor: pointer;">
       <img class="card-img-top" src="https://m.media-amazon.com/images/I/81EBp0vOZZL._AC_SY741_.jpg" alt="FOTR">
       <div class="card-body">
-        <p class="card-text">{{fotr.name}}</p>
+        <p class="card-text d-flex justify-content-center">{{fotr.name}}</p>
       </div>
     </div>
   </div>
   <div class="col-md-4">
-    <div class="card movie" id="{{ttt.id}}" style="width: 24rem; cursor: pointer;">
+    <div class="card h-100 movie" id="{{ttt.id}}" style="width: 27rem; cursor: pointer;">
       <img class="card-img-top" src="https://m.media-amazon.com/images/I/81eqQvveI6L._AC_SY679_.jpg" alt="TTT">
       <div class="card-body">
-        <p class="card-text">{{ttt.name}}</p>
+        <p class="card-text d-flex justify-content-center">{{ttt.name}}</p>
       </div>
     </div>
-  </div>
+  </div>   
   <div class="col-md-4">
-    <div class="card movie" id="{{rotk.id}}" style="width: 24rem; cursor: pointer;">
+    <div class="card h-100 movie" id="{{rotk.id}}" style="width: 27rem; cursor: pointer;">
       <img class="card-img-top" src="https://m.media-amazon.com/images/I/91UP+jG-ypL._AC_SY679_.jpg" alt="ROTK">
       <div class="card-body">
-        <p class="card-text">{{rotk.name}}</p>
+        <p class="card-text d-flex justify-content-center">{{rotk.name}}</p>
       </div>
     </div>
   </div>
 </div>
+{% endif %}
 
 {% if not movies[0] %}
 <a href="/get-movies">
