--- a/static/style.css
+++ b/static/style.css
@@ -5,3 +5,37 @@ div #loading {
     background: url(/static/ajax-loader.gif) no-repeat;
     cursor: wait;
     }
+
+.card-img-top {
+    width: 100%;
+    height: 41vw;
+    object-fit: cover;
+}
+
+.quote {
+    cursor: pointer;
+}
+
+body {
+    background-image: url("wp6153198-lord-of-the-rings-minimalist-wallpapers.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
+div .card {
+    background-color: #efe5b3;
+    background-image: url("paper-1074131_1280.webp");
+    background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    font-family: 'what';
+}
+
+@font-face {
+    font-family: 'what';
+    src: url("RingbearerMedium-51mgZ.ttf") format('truetype');
+}
+
+table {
+    font-family: 'what';
+}
