--- a/templates/characters/character_page.html
+++ b/templates/characters/character_page.html
@@ -19,7 +19,7 @@
             {% endif %}
           </div>
           <a href="/characters/{{char.id}}/add-comment">
-            <button type="button" class="btn btn-success">Comment</button>
+            <button type="button" class="btn btn-success mx-2">Comment</button>
           </a>
         </div>    
         {% endif %}
