--- a/templates/movies/movie_page.html
+++ b/templates/movies/movie_page.html
@@ -24,7 +24,7 @@
 {% if movie.quotes %}
 <div class="row">
     <div class="col-md-8" id="movie-quotes">
-        <h3>Quotes from this movie:</h3>
+        <h3 class="text-white">Quotes from this movie:</h3>
     </div>
 </div>
 <div class="row">
