--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -20,8 +20,8 @@
                 {% endfor %}
             </div>
             {% endfor %}
-            <a href="/"><button type="button" class="btn btn-secondary">Back</button></a> 
-            <button type="submit" class="btn btn-success">Edit User</button>
+            <a href="{{prev_url}}"><button type="button" class="btn btn-secondary">Back</button></a> 
+            <button type="submit" class="btn btn-success mx-2">Edit User</button>
         </form>
     </div>
 </div>
