--- a/templates/characters/characters.html
+++ b/templates/characters/characters.html
@@ -4,8 +4,6 @@
 
 {% block content %}
 
-<div id="loading"></div>
-
 {% if movies[0] %}
   {% if chars[0] %}
     {% if not g.user %}
@@ -43,17 +41,17 @@
       {% if g.user %}
       <td>
         <div class="btn-toolbar">
-          <div id="{{char.id[-5:]}}" class="like-char" data-id="{{char.id}}">
+          <div id="{{char.id[-5:]}}" class="like-char d-flex" data-id="{{char.id}}">
           {% if g.user in char.faveduser %}
             {% if g.user.id == char.faveduser[char.faveduser.index(g.user)].id %}
             <button class="btn btn-info text-white like-char" data-id="{{char.id}}"">Unlike</button>
             {% endif %}
             {% else %}
             <button class="btn btn-info like-char" data-id="{{char.id}}">Like</button>
-            {% endif %}
+          {% endif %}
           </div>
           <a href="/characters/{{char.id}}/add-comment">
-            <button type="button" class="btn btn-success">Comment</button>
+            <button type="button" class="btn btn-success mx-2">Comment</button>
           </a>
         </div>    
       </td>
@@ -64,15 +62,9 @@
 </table>
 {% endif %}
 
-
-{% if movies[0] %}
 {% if not chars[0] %}
-<div class="content">
-  <a href="/get-characters-quotes">
-      <button type="button" class="btn btn-primary btn-lg" id="char-quote-btn">Get Other Stuff</button>
-  </a>
-</div>
-{% endif %}
+<div id="loading"></div>
+<h1 class="display-1">Assets are still loading, please refresh</h1>
 {% endif %}
 
 {% endblock %}
