--- a/templates/results.html
+++ b/templates/results.html
@@ -7,7 +7,7 @@
 <div class="row justify-content-md-center">
     {% if quotes[0] %}
     <div class="col-md-6">
-        <h2>Quote Search Results:</h2>
+        <h2 class="text-white">Quote Search Results:</h2>
         {% for quote in quotes %}
         <div class="card quote my-3" id="{{quote.id}}">
             <div class="card-body">
