--- a/templates/characters/character_page.html
+++ b/templates/characters/character_page.html
@@ -24,8 +24,8 @@
         </div>    
         {% endif %}
     </div>
-    <div class="col-md-4">
-        <p class="text-white">
+    <div class="col-md-4 text-white">
+        <p class="detail">
             Race: {{char.race}}<br>
             Birth: {{char.birth}}<br>
             Death: {{char.death}}<br>
