--- a/templates/movies/movie_page.html
+++ b/templates/movies/movie_page.html
@@ -38,14 +38,19 @@
                         <a href="/characters/{{quote.char.id}}">{{quote.char.name}}</a>
                     </footer>
                     {% if g.user %}
-                    <div id="{{quote.id[-4:]}}" class="like-quote" data-id="{{quote.id}}">
-                        {% if quote.faveduser[0] %}
-                            {% if g.user.id == quote.faveduser[0].id %}
-                            <button class="btn btn-info text-white" data-id="{{quote.id}}">Unlike</button>
+                    <div class="btn-toolbar">
+                        <div id="{{quote.id[-4:]}}" class="like-quote" data-id="{{quote.id}}">
+                            {% if quote.faveduser[0] %}
+                                {% if g.user.id == quote.faveduser[0].id %}
+                                <button class="btn btn-info text-white" data-id="{{quote.id}}">Unlike</button>
+                                {% endif %}
+                            {% else %}
+                            <button class="btn btn-info" data-id="{{quote.id}}">Like</button>
                             {% endif %}
-                        {% else %}
-                        <button class="btn btn-info" data-id="{{quote.id}}">Like</button>
-                        {% endif %}
+                        </div>
+                        <a href="/quotes/{{quote.id}}/add-comment">
+                            <button type="button" class="btn btn-success mx-2">Comment</button>
+                        </a>
                     </div> 
                     {% endif %}                    
                 </blockquote>
