-views and models unittests, -results page, -text colors

--- a/templates/results.html
+++ b/templates/results.html
@@ -41,7 +41,7 @@
 
     {% if chars[0] %}
     <div class="col-md-6">
-        <h2>Character Search Results:</h2>
+        <h2 class="text-white">Character Search Results:</h2>
         <table class="table table-striped table-dark table-bordered table-hover my-3">
             <thead>
               <tr>
